--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,8 @@ cache:
 
 env:
   - EMBER_TRY_SCENARIO=default
+  - EMBER_TRY_SCENARIO=1.10.1
+  - EMBER_TRY_SCENARIO=1.11.3
   - EMBER_TRY_SCENARIO=ember-release
   - EMBER_TRY_SCENARIO=ember-beta
   - EMBER_TRY_SCENARIO=ember-canary
